--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ bin/Debug/netcoreapp3.0/ControlTesisCore.Views.dll
 bin/Debug/netcoreapp3.0/ControlTesisCore.Views.pdb
 obj/Debug/netcoreapp3.0/ControlTesisCore.csprojAssemblyReference.cache
 obj/Debug/netcoreapp3.0/project.razor.json
+obj/Debug/netcoreapp3.0/ControlTesisCore.assets.cache
+obj/Debug/netcoreapp3.0/ControlTesisCore.csprojAssemblyReference.cache
