--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ obj/Debug/netcoreapp3.0/ControlTesisCore.csprojAssemblyReference.cache
 obj/Debug/netcoreapp3.0/project.razor.json
 obj/Debug/netcoreapp3.0/ControlTesisCore.assets.cache
 obj/Debug/netcoreapp3.0/ControlTesisCore.csprojAssemblyReference.cache
+obj/Debug/netcoreapp3.0/ControlTesisCore.assets.cache
+obj/Debug/netcoreapp3.0/ControlTesisCore.csprojAssemblyReference.cache
+obj/Debug/netcoreapp3.0/project.razor.json
